--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,8 @@
     <title>index</title>
 </head>
 <body>
-<h1>index</h1>
 <h4>展示一些公共资源</h4>
-<div th:include="common/navbar::category"></div>
+<div th:include="common/navbar::navbar"></div>
 <div th:include="article/summary::articleSummary"></div>
 <div th:include="common/tag::tagsBar"></div>
 </body>
