--- a/src/main/resources/templates/userHome.html
+++ b/src/main/resources/templates/userHome.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p><a th:href="@{/userInfo}">userInfo</a></p>
-<div th:include="common/navbar::category"></div>
+<div th:include="common/navbar::navbar"></div>
 <div th:include="common/userInfoBar::userInfoBar"></div>
 <div th:include="article/summary::articleSummary"></div>
 <div th:include="common/tag::tagsBar"></div>
