--- a/src/main/resources/templates/userInfo.html
+++ b/src/main/resources/templates/userInfo.html
@@ -5,7 +5,7 @@
     <title>userInfo</title>
 </head>
 <body>
-<div th:include="common/navbar::category"></div>
+<div th:include="common/navbar::navbar"></div>
 <h1>user info: </h1>
 <h4 th:if="${#httpServletRequest.getParameter('error')}">Error: <span th:text="${#httpServletRequest.getParameter('error')}"/></h4>
 <h4 th:if="${msg}"><span th:text="${msg}"></span></h4>
